# sinevo_mem

./: .env  Dockerfile  docker-compose.yaml  docker-compose.yml  go.mod  main.go  pyproject.toml
app/: db.sqlite3
app/app/: settings.py  urls.py
app/templates/: index.html
templates/: index.html
